--- a/Countriy/appsettings.json
+++ b/Countriy/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConString": " Server=(localdb)\\mssqllocaldb; Database = Qita; Trusted_Connection = True"
+
+  },
   "AllowedHosts": "*"
 }
